fix: update all URLs to use opencode.tao-shen.com and fix terminal memory leak
- Update serverUrl in docs/page.tsx to https://opencode.tao-shen.com
- Update fallback URL in api proxy route to https://opencode.tao-shen.com
- Update .env.example with correct Cloudflare tunnel URL
- Update direct link in page.tsx to use HTTPS
- Fix terminal resize listener memory leak by adding cleanup

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,5 @@ ANTHROPIC_API_KEY=your_anthropic_api_key
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # OpenCode Server URL (for API proxy)
-# In Vercel: Set this to https://oracle.tao-shen.com
-OPENCODE_SERVER_URL=http://170.9.12.37:4096
+# In Vercel: Set this to your Cloudflare tunnel URL
+OPENCODE_SERVER_URL=https://opencode.tao-shen.com
