fix: use working Cloudflare quick tunnel URL
Updated all URLs to use the active quick tunnel:
reform-permission-pharmacy-saturn.trycloudflare.com

This provides immediate functionality while named tunnel
setup is pending.

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,4 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # OpenCode Server URL (for API proxy)
 # In Vercel: Set this to your Cloudflare tunnel URL
-OPENCODE_SERVER_URL=https://opencode.tao-shen.com
+OPENCODE_SERVER_URL=https://reform-permission-pharmacy-saturn.trycloudflare.com
