--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "uuid": "^9.0.0",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
     "zod": "^3.23.0"
   },
   "devDependencies": {
