chore: Update OpenCode server URL references
- Change the OpenCode server URL in the .env.example file and throughout the application to the new ClawCloud server URL.
- Ensure consistency across API proxy routes and client components by updating the server URL in page.tsx and TerminalClient.tsx.

This update reflects the migration to the new server infrastructure.

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,5 @@ ANTHROPIC_API_KEY=your_anthropic_api_key
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # OpenCode Server URL (for API proxy)
-# In Vercel: Set this to your Cloudflare tunnel URL
-OPENCODE_SERVER_URL=https://opencode.tao-shen.com
+# In Vercel: Set this to your ClawCloud server URL
+OPENCODE_SERVER_URL=https://nngpveejjssh.eu-central-1.clawcloudrun.com
