fix: Align SDK config with existing OpenCode server
- Update SDK client default URL to match existing server
- Add NEXT_PUBLIC_OPENCODE_SERVER_URL to .env.example
- Update .gitignore to exclude demo directory
- Ensure both server-side and client-side URLs are configured

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ ANTHROPIC_API_KEY=your_anthropic_api_key
 # Application
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# OpenCode Server URL (for API proxy)
-# In Vercel: Set this to your ClawCloud server URL
+# OpenCode Server URLs
+# In Vercel: Set both to your OpenCode server URL
+
+# Server-side (for API proxy routes)
 OPENCODE_SERVER_URL=https://nngpveejjssh.eu-central-1.clawcloudrun.com
+
+# Client-side (for SDK) - must have NEXT_PUBLIC_ prefix
+NEXT_PUBLIC_OPENCODE_SERVER_URL=https://nngpveejjssh.eu-central-1.clawcloudrun.com
